fix a z-index bug

--- a/assets/css/toast.css
+++ b/assets/css/toast.css
@@ -3,6 +3,7 @@
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0);
+    z-index: 65535;
   }
   
   .toast_container ol {
